Fixed some spacing

--- a/styles.scss
+++ b/styles.scss
@@ -38,8 +38,6 @@ $dark-gray-blue: hsl(224, 30%, 27%);
 
 html {
   scroll-behavior: smooth;
-  min-height: 100vh;
-
 }
 
 body {
@@ -65,7 +63,7 @@ button,
 input,
 textarea,
 select {
-  font-family: inherit;
+  font: inherit;
 }
 
 img {
@@ -161,13 +159,16 @@ p {
 // Summary - Nested
 .summary {
   width: 100%;
-  padding: 2rem;
+  padding: 1rem 2rem 2rem 2rem;
   border-radius: 0 24px 24px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.75rem;
 
   h2 {
     color: $dark-gray-blue;
     text-align: left;
-    margin: 0 0 24px 0;
   }
 
   p {
@@ -175,9 +176,8 @@ p {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 16px;
+    padding: 12px 16px;
     border-radius: 8px;
-    margin-bottom: 12px;
     font-weight: 700;
 
     img {
@@ -222,7 +222,6 @@ p {
     padding: 12px 32px;
     border-radius: 24px;
     width: 100%;
-    margin-top: 32px;
     font-weight: 700;
     color: $white;
     border: none;
@@ -253,10 +252,15 @@ p {
   .component-container {
     flex-direction: row;
     width: 70%;
+    max-width: 650px;
   }
 
   .result {
     border-radius: 24px;
+  }
+
+  .summary {
+    padding: 2rem;
   }
 }
 
